Add categories and dynamically display works

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li><a href="login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -83,7 +83,7 @@
 			</figure>
 		</div>
 	</section>
-	<section id="contact">
+	<section id="contact" class="form-section">
 		<h2>Contact</h2>
 		<p>Vous avez un projet ? Discutons-en !</p>
 		<form action="#" method="post">
@@ -105,5 +105,7 @@
 		</ul>
 	</nav>
 </footer>
+
+<script src="./main.js" type="module"></script>
 </body>
 </html>
