Add validation form + fix some css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -33,11 +33,12 @@
 			<h2>Designer d'espace</h2>
 			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice).</p>
 		</article>
 	</section>
 	<section id="portfolio">
 		<div class="portfolio-header">
+			<div class="spacer"></div>
 			<h2>Mes Projets</h2>
 			<button class="edit-button"><i class="fa-regular fa-pen-to-square"></i> modifier</button>	
 		</div>
@@ -75,6 +76,7 @@
 		<span class="close-button">&times;</span>
 		<h3>Galerie photo</h3>
 		<div class="gallery modal-gallery"></div>
+		<hr>
 		<button class="add-work-button">Ajouter une photo</button>
 	  </div>
 	</div>
@@ -95,13 +97,18 @@
 			  <p>jpg, png: 4mo max</p>
 			</label>
 			<input type="file" id="image-upload" name="image" accept="image/png, image/jpeg" required>
-		  </div>
+		</div>
+		<span class="error-message image-error"></span>
+
 			<label for="title">Titre</label>
 			<input type="text" name="title" id="title" required>
+			<span class="error-message title-error"></span>
+
 			<label for="category">Catégorie</label>
-			<select name="category" id="category" required>
-			</select>
-		  <button type="submit" class="submit-button">Valider</button>
+			<select name="category" id="category" required></select>
+			<span class="error-message category-error"></span>
+			<hr>
+		  <button type="submit" class="submit-button disabled">Valider</button>
 		</form>
 	  </div>
 	</div>
