--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -15,8 +15,8 @@
     <nav>
         <ul>
             <li><a href="index.html">projets</a></li>
-            <li><a href="index.html#contact">Contact</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="index.html#contact">contact</a></li>
+            <li><a href="login.html">login</a></li>
             <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
         </ul>
     </nav>
@@ -31,6 +31,7 @@
             <input type="password" name="password" id="password" required>
             <input type="submit" value="Se connecter">
         </form>
+        <p><a href="#">Mot de passe oublié</a></p>
     </section>
 </main>
 <footer>
