fix error message in login page + fix some css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,7 +20,7 @@
 			<li><a href="index.html">projets</a></li>
 			<li><a href="index.html#contact">contact</a></li>
 			<li><a href="login.html" id="auth-button">login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><i class="fa-brands fa-instagram"></i></li>
 		</ul>
 	</nav>
 </header>
@@ -73,7 +73,7 @@
 <template id="gallery-modal-template">
 	<div class="modal-container">
 		<div class="modal">
-			<span class="close-button">&times;</span>
+			<i class="close-button fa-solid fa-xmark"></i>
 			<div class="modal-content">
 				<h3>Galerie photo</h3>
 				<div class="modal-gallery"></div>
@@ -88,8 +88,8 @@
 	<div class="modal-container">
 		<div class="modal">
 			<div class="modal-content">
-				<span class="back-button">&larr;</span>
-				<span class="close-button">&times;</span>
+				<i class="back-button fa-solid fa-arrow-left"></i>
+				<i class="close-button fa-solid fa-xmark"></i>
 				<h3>Ajout photo</h3>
 				<form id="add-work-form" class="form-section">
 				<div class="upload-container">
