--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
             <li><a href="index.html">projets</a></li>
             <li><a href="index.html#contact">contact</a></li>
             <li><a href="login.html">login</a></li>
-            <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
         </ul>
     </nav>
 </header>
@@ -29,6 +30,7 @@
             <input type="email" name="email" id="email" required>
             <label for="password">Password</label>
             <input type="password" name="password" id="password" required>
+            <span class="error-message login-error"></span>
             <input type="submit" value="Se connecter">
         </form>
         <p><a href="#">Mot de passe oublié</a></p>
